<resources>
    <string name="app_name">Firebase</string>
    <string name="photo">Photo</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="social_media">Instagram / Linkedin</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
</resources>
